# xdg

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini  xdg.py  xdg_test.py
.github/workflows/: tests.yaml
